@@ -4,3 +4,5 @@
     - Added the MIT X11 license as the LICENSE file.
     - Added the t/pod.t and t/pod-coverage.t tests and added full
     POD coverage.
+    - Converted to Build.PL in order to have a better META.yml
+    and other advantages.
